# river-data-scraper

./: .env.example  .gitignore  README.md  config.py  downloader.py  job.py  logger.py  main.py  pyproject.toml  requirements.txt  spreadsheet.py
.github/workflows/: update-spreadsheet.yml
src/update_spreadsheet/: config.py  downloader.py  job.py  logger.py  spreadsheet.py
