[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "river-data-scraper"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
  "requests==2.32.3",
  "beautifulsoup4==4.13.4",
  "pandas==2.2.3",
  "gspread==6.2.0",
  "google-auth==2.39.0",
  "python-dotenv==1.1.0",
  "openpyxl==3.1.5",
  "tenacity==9.1.2"
]

[project.scripts]
update-spreadsheet = "update_spreadsheet.job:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
